--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -144,14 +144,14 @@
 <h3>Příklad čtvrtý</h3>
 
 <ol>
-	<li>Polívka hnědá se stříkačkami a&nbsp;polívka bílá s&nbsp;míšeninkou</li>
-	<li>Pastičky sardelové</li>
-	<li>Marinovaný ouhoř nebo pstruzi</li>
-	<li>Hovězí maso s&nbsp;nějakým okolkem, k&nbsp;němu dvě rozličné omáčky, kyselé okurky a&nbsp;červená řepa</li>
-	<li>Fašírovaná kapusta nebo špenát s&nbsp;klobáskami</li>
-	<li>Kuřata s&nbsp;lanýžemi nebo žampiony a&nbsp;s&nbsp;račími ocásky</li>
-	<li>Piškotový a&nbsp;čokoládový nákyp</li>
-	<li>Zadělávaná zvěřina s&nbsp;okolkem z&nbsp;máslového těsta</li>
+	<li><a href="polivky-masite.html#hneda-silna-polivka">Polívka hnědá</a> se stříkačkami a&nbsp;polívka bílá s&nbsp;míšeninkou</li>
+	<li><a href="pastyky.html#pasticky-sardelove">Pastičky sardelové</a></li>
+	<li><a href="rozlicne-ryby.html#marinovany-ouhor">Marinovaný ouhoř</a> nebo pstruzi</li>
+	<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso</a> s&nbsp;nějakým okolkem, k&nbsp;němu dvě rozličné omáčky, <a href="nalozeniny-k-hovezimu-masu.html#okurky-v-octe-nalozene">kyselé okurky</a> a&nbsp;<a href="nalozeniny-k-hovezimu-masu.html#nalozena-cervena-repa">červená řepa</a></li>
+	<li><a href="zeleniny.html#kapusta-fasirovana-pro-8-osob">Fašírovaná kapusta</a> nebo špenát s&nbsp;klobáskami</li>
+	<li><a href="zadelavana-a-dusena-jidla.html#kurata-s-lanyzemi">Kuřata s&nbsp;lanýžemi</a> nebo žampiony a&nbsp;s&nbsp;račími ocásky</li>
+	<li><a href="nakypy.html#piskotovy-nakyp-s-mandlemi">Piškotový</a> a&nbsp;<a href="nakypy.html#nakyp-cokoladovy">čokoládový nákyp</a></li>
+	<li><a href="zadelavana-zverina.html">Zadělávaná zvěřina</a> s&nbsp;okolkem z&nbsp;máslového těsta</li>
 </ol>
 
 <h4>Pečené</h4>
