--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -144,9 +144,9 @@
 
 <p><b><i>NB.</i></b> V&nbsp;nejnovějši době dávají znatelové přednost <b><i>nestaženému</i></b> ouhoři poněvadž kůže má zvláštní jemnou chuť; pročež ponechává se stahování ouhoře vlastní oblibě.</p>
 
-<a id="marinovany-o-uhor"><h2>Marinovaný o&nbsp;uhoř</h2></a>
+<a id="marinovany-ouhor"><h2>Marinovaný ouhoř</h2></a>
 
-<p>Ouhoř se zabije, kůže se však s&nbsp;něho nestáhne, nýbrž jakmile se vnitřnosti z&nbsp;něho vyndají, rozkrájí se na špalíčky, nasolí se a&nbsp;upeče se na rožníčku, přičemž se pořád podlévá novým, máslem; pak se naleje do hrnku vinni ocet, dá se do něho cibule, pepř, zázvor, nové koření, hřebíček, citronová kůra, bobkové listí, rozmarýna, a&nbsp;nechá se to chvilku povařit;. zatím se ouhoř narovná do vyklejtovaného hrnku, dobře se pro-sype drobně rozkrájenou citronovou kůrou a&nbsp;kaprlemi, pak se ocet na něj procedí, hrnek se pevně obváže a&nbsp;postaví se do studena. Takto připravený ouhoř nechá se ve studeném místě kolik neděl uchovati.</p>
+<p>Ouhoř se zabije, kůže se však s&nbsp;něho nestáhne, nýbrž jakmile se vnitřnosti z&nbsp;něho vyndají, rozkrájí se na špalíčky, nasolí se a&nbsp;upeče se na rožníčku, přičemž se pořád podlévá novým, máslem; pak se naleje do hrnku vinni ocet, dá se do něho cibule, pepř, zázvor, nové koření, hřebíček, citronová kůra, bobkové listí, rozmarýna, a&nbsp;nechá se to chvilku povařit; zatím se ouhoř narovná do vyklejtovaného hrnku, dobře se prosype drobně rozkrájenou citronovou kůrou a&nbsp;kaprlemi, pak se ocet na něj procedí, hrnek se pevně obváže a&nbsp;postaví se do studena. Takto připravený ouhoř nechá se ve studeném místě kolik neděl uchovati.</p>
 
 <a id="ouhor-na-zvlastni-zpusob"><h2>Ouhoř na zvláštní způsob</h2></a>
 
