--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -14,7 +14,7 @@
 
 <a id="kompot-z-angrestu"><h2>Kompot z&nbsp;angreštu</h2></a>
 
-<p>Ober čistě asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru,. potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
+<p>Ober čistě asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru, potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
 
 <a id="kompot-z-merunek"><h2>Kompot z&nbsp;meruněk</h2></a>
 
