--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -157,14 +157,14 @@
 <h4>Pečené</h4>
 
 <ol>
-	<li>Telecí kýta</li>
-	<li>Husičky nebo kachny</li>
-	<li>Zajíc</li>
-	<li>Kuřata</li>
-	<li>Srnčí kýta</li>
-	<li>Dva kyselé saláty, pak švestkový a&nbsp;jablkový kompot</li>
-	<li>Stočené selátko s&nbsp;rosolem</li>
-	<li>Uzený jazyk</li>
+	<li><a href="pecene.html#teleci-kejta-na-obycejny-zpusob">Telecí kýta</a></li>
+	<li><a href="pecene.html#husa-a-kachna">Husičky nebo kachny</a></li>
+	<li><a href="pecene.html#zajic">Zajíc</a></li>
+	<li><a href="pecene.html#kurata-vyslanena">Kuřata</a></li>
+	<li><a href="pecene.html#srnci-hrbet-a-kejta">Srnčí kýta</a></li>
+	<li>Dva kyselé saláty, pak <a href="kompoty.html#kompot-z-cerstvych-svestek">švestkový</a> a&nbsp;<a href="kompoty.html#kompot-z-cerstvych-jablek">jablkový</a> kompot</li>
+	<li><a href="masite-rosoly.html#rosolovane-selatko">Stočené selátko s&nbsp;rosolem</a></li>
+	<li><a href="pecene.html#uzeny-hovezi-jazyk-a-sunka">Uzený jazyk</a></li>
 </ol>
 
 <p>
@@ -240,13 +240,13 @@ Všeho dvě mísy. Po malé přestávce.
 <h3>Příklad druhý</h3>
 
 <ol>
-	<li>Hnědá rybí polívka s&nbsp;knedlíčkami</li>
-	<li>Nadívané vejce</li>
-	<li>Černá ryba, k&nbsp;tomu talíř kyselého zelí a&nbsp;talíř moučných knedlíků</li>
-	<li>Nákyp čokoládový</li>
-	<li>Zadělávané žáby</li>
-	<li>Pečený ouhoř nebo mníci</li>
-	<li>Koláčky z&nbsp;koření, oplatky nebo trubičky</li>
+	<li><a href="rybi-a-postni-polivky.html#hneda-rybi-polivka-s-knedlickami">Hnědá rybí polívka s&nbsp;knedlíčkami</a></li>
+	<li><a href="vejce.html#nadivane-vejce">Nadívané vejce</a></li>
+	<li><a href="rozlicne-ryby.html#kapr-na-cerno">Černá ryba</a>, k&nbsp;tomu talíř kyselého zelí a&nbsp;talíř moučných knedlíků</li>
+	<li><a href="nakypy.html#nakyp-cokoladovy">Nákyp čokoládový</a></li>
+	<li><a href="raci-zaby-sneci-a-musle.html#zadelavane-zaby-s-petruzelkou">Zadělávané žáby</a></li>
+	<li><a href="rozlicne-ryby.html#peceny-ouhor">Pečený ouhoř</a> nebo mníci</li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#kolacky-s-korenim">Koláčky z&nbsp;koření</a>, oplatky nebo trubičky</li>
 	<li>Dva talíře ovoce, pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
