--- a/src/pecene.html
+++ b/src/pecene.html
@@ -64,7 +64,7 @@
 
 <a id="uzeny-hovezi-jazyk-a-sunka"><h2>Uzený hovězí jazyk a&nbsp;šunka</h2></a>
 
-<p>Jazyk se hezký měkce uvaří, pak se s&nbsp;něho kůže čistě oloupá, a&nbsp;když vystydne, dá se na stůl na pěkně vystříhaném papíru. Šunka když se uvaří, dá se na mísu, kůže se pěkně odloupne a&nbsp;to tučné posype se majoránkou a&nbsp;tlučeným pepřem. Z&nbsp;kůže se mohou nastříhat všeliké lístky, kterými se šunka okrášlí, a&nbsp;okolo, kosti se ovine vystříhaný buď barevný nebo bílý papír, a&nbsp;tak se to dá na stůl. E jazyku jakož i&nbsp;k&nbsp;šunce musí se dát na stůl olej, ocet a&nbsp;tlučený pepř.</p>
+<p>Jazyk se hezký měkce uvaří, pak se s&nbsp;něho kůže čistě oloupá, a&nbsp;když vystydne, dá se na stůl na pěkně vystříhaném papíru. Šunka když se uvaří, dá se na mísu, kůže se pěkně odloupne a&nbsp;to tučné posype se majoránkou a&nbsp;tlučeným pepřem. Z&nbsp;kůže se mohou nastříhat všeliké lístky, kterými se šunka okrášlí, a&nbsp;okolo, kosti se ovine vystříhaný buď barevný nebo bílý papír, a&nbsp;tak se to dá na stůl. K jazyku jakož i&nbsp;k&nbsp;šunce musí se dát na stůl olej, ocet a&nbsp;tlučený pepř.</p>
 
 <a id="husa-a-kachna"><h2>Husa a&nbsp;kachna</h2></a>
 
