--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -40,7 +40,7 @@
 
 <p>Uvař mandel šneků, vyndej je z&nbsp;domků, uřež ocásky, šneky očisti, přemej je v&nbsp;soli a&nbsp;vlažné vodě, a&nbsp;nech je buď v&nbsp;postní den v&nbsp;petruželové vodě, nebo v&nbsp;masitý den v&nbsp;hovězí polívce do měkka uvařit; domky nech v&nbsp;čisté vodě trochu vyvařit, pak je umej v&nbsp;soli, poklop je a&nbsp;nech je vysáknout. Nádivku pak dělej takto: Utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> nového másla se šesti <a href="miry-a-vahy.html#lot" class="mav">loty</a> čerstvých sardelí, dej k&nbsp;tomu s&nbsp;půl citronu drobně rozkrájenou kůru, 3 stroužky se solí rozetřeného česneku, trochu květu, jednu strouhanou žemličku, a&nbsp;je-li to málo slané, tedy přidej trochu soli a&nbsp;všecko dobře rozetři. Nyní dej vždy do jednoho domku kousek nádivky, na tuto vlož jednoho šneka, a&nbsp;nádivkou je opět doplň; potom je urovnej na mísu, nech trochu strouhané žemličky na másle do bledězlatova usmažit, nalej na ni trochu polívky, v&nbsp;které se šneci vařili, a&nbsp;trochu rakouského vína, dej k&nbsp;tomu dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> v&nbsp;másle rozetřených sardelí a&nbsp;nech to trochu povařit, pak to vlej na šneky a&nbsp;nech je asi čtvrt hodiny v&nbsp;troubě dusit. Tato nádivka stačí na 20 až 25 šneků. Vína a&nbsp;polívky se dá dle potřeby, aby zastalo pod šnekama trochu omáčky.</p>
 
-<a id="sneci-ocasky"><h2>Šneci ocásky</h2></a>
+<a id="sneci-ocasky"><h2>Šnečí ocásky</h2></a>
 
 <p>Šnečí ocásky se dají na máslo s&nbsp;drobně rozkrájenou cibulkou opect, a&nbsp;když cibulka začíná červenat, dají se na talíř nebo na mísu, která se kolem okrášlí smaženou strouhanou žemličkou.</p>
 
