--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -97,7 +97,7 @@
 
 <ol>
 	<li><a href="polivky-masite.html#bila-polivka-s-rejzi-pro-6-osob">Bílá polívka s&nbsp;rejží</a></li>
-	<li>Hovězí maso houbičkami a&nbsp;zemčátky obložené, cibulková omáčka a&nbsp;kyselé okurky</li>
+	<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html#obycejne-hovezi-maso">Hovězí maso</a> houbičkami a&nbsp;zemčátky obložené, cibulková omáčka a&nbsp;<a href="nalozeniny-k-hovezimu-masu.html#okurky-v-octe-nalozene">kyselé okurky</a></li>
 	<li><a href="zeleniny.html#karfiol-s-kuratkami">Kuřátka s&nbsp;karfiolem</a></li>
 	<li><a href="pecene.html#husa-a-kachna">Pečená kachna</a></li>
 	<li><a href="salaty.html#salat-hlavkovy">Hlávkový salát</a></li>
@@ -175,14 +175,14 @@ Ode všeho po dvou mísách.Po malé přestávce následují koláče, dorty a&n
 <h3>Příklad velké tabule</h3>
 
 <ol>
-	<li>Polívka žlutá s&nbsp;rosolem a&nbsp;polívka hnědá se smaženým hráškem aneb s&nbsp;krapličkami</li>
-	<li>Losos aneb ouhoř s&nbsp;majonézovou omáčkou</li>
-	<li>Míšeninka (ragú) z&nbsp;telecích uší, brzlíků a&nbsp;jazyků</li>
-	<li>Hovězí maso s&nbsp;nějakým okolkem, dvě rozličné omáčky, kyselé okurky, ryzce a&nbsp;červená řepa</li>
-	<li>Zelený hrášek se smaženými kuřátky aneb omaštěný špargl</li>
-	<li>Zadělávaná zvěřina s&nbsp;máslovým okolkem</li>
-	<li>Košíčky se šodó a&nbsp;mandlový nákyp</li>
-	<li>Kapoun aneb kuřata s&nbsp;mušlemi</li>
+	<li><a href="polivky-masite.html#polivka-zluta-s-rosolem-pro-8-neb-12-osob">Polívka žlutá</a> s&nbsp;rosolem a&nbsp;<a href="polivky-masite.html#hneda-silna-polivka">polívka hnědá</a> se smaženým hráškem aneb s&nbsp;krapličkami</li>
+	<li><a href="rozlicne-ryby.html#losos-s-majonezovou-omackou">Losos</a> aneb <a href="rozlicne-ryby.html#ouhor-s-majonezovon-omackou">ouhoř s&nbsp;majonézovou omáčkou</a></li>
+	<li><a href="zadelavana-a-dusena-jidla.html#miseninka-z-telecich-usi-brzliku-a-jazyku">Míšeninka (ragú) z&nbsp;telecích uší, brzlíků a&nbsp;jazyků</a></li>
+	<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso</a> s&nbsp;nějakým okolkem, dvě rozličné omáčky, <a href="nalozeniny-k-hovezimu-masu.html#okurky-v-octe-nalozene">kyselé okurky</a>, <a href="nalozeniny-k-hovezimu-masu.html#nalozene-ryzce">ryzce</a> a&nbsp;<a href="nalozeniny-k-hovezimu-masu.html#nalozena-cervena-repa">červená řepa</a></li>
+	<li><a href="zeleniny.html#zeleny-hrasek-se-smazenymi-kuraty">Zelený hrášek se smaženými kuřátky</a> aneb omaštěný špargl</li>
+	<li><a href="zadelavana-zverina.html">Zadělávaná zvěřina</a> s&nbsp;máslovým okolkem</li>
+	<li><a href="nakypy.html#kosicky-se-sodo">Košíčky se šodó</a> a&nbsp;<a href="nakypy.html#nakyp-z-mandli">mandlový nákyp</a></li>
+	<li><a href="zadelavana-a-dusena-jidla.html#kapoun-s-muslemi">Kapoun aneb kuřata s&nbsp;mušlemi</a></li>
 </ol>
 
 <h4>Pečené</h4>
