--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -208,9 +208,9 @@
 
 <p>Dej na vál čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> mouky, čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> rozkrájeného citronátu, trochu anýzu, promíchej a&nbsp;zadělej to jedním vejcem a&nbsp;jedním žloutkem (jsou-li však vejce velké tedy je dost jednoho), načež udělej z&nbsp;těsta asi 3 malé šištičky, pomaž je vejcem, dej je na plech na máslem pomazaný papír a&nbsp;nech je v&nbsp;troubě upect; potom z&nbsp;nich nakrájej přespřič malé suchárky (ale dokud jsou horké, sice by se nedaly krájet) a&nbsp;nedávej je již do trouby sušit, ony uschnou samy.</p>
 
-<a id="sucharky-k-vina"><h2>Suchárky k&nbsp;vina</h2></a>
+<a id="sucharky-k-vinu"><h2>Suchárky k&nbsp;vínu</h2></a>
 
-<p>Dej na mísu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, vraz do něho 10 žloutků, a&nbsp;tři to něco přes půl hodiny pak do toho dej trochu fenyklu, z&nbsp;těch desíti bilků tuhý sníh a&nbsp;10 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> pěkné mouky, zamíchej to, dej to do vymazané suchárkové formy a&nbsp;nech to zvolna pect, až to začne padat, pak to vyklop a&nbsp;nech vystydnout; potom to rozkrájej na dvě stébla tlusté kousky, vlož je na papír na plech a&nbsp;nech je v&nbsp;troubě ne příliš horké osušit‘</p>
+<p>Dej na mísu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, vraz do něho 10 žloutků, a&nbsp;tři to něco přes půl hodiny pak do toho dej trochu fenyklu, z&nbsp;těch desíti bilků tuhý sníh a&nbsp;10 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> pěkné mouky, zamíchej to, dej to do vymazané suchárkové formy a&nbsp;nech to zvolna pect, až to začne padat, pak to vyklop a&nbsp;nech vystydnout; potom to rozkrájej na dvě stébla tlusté kousky, vlož je na papír na plech a&nbsp;nech je v&nbsp;troubě ne příliš horké osušit‘.</p>
 
 <a id="marcipanky"><h2>Marcipánky</h2></a>
 
