--- a/src/pecene.html
+++ b/src/pecene.html
@@ -22,7 +22,7 @@
 
 <a id="teleci-kejta-se-sardelemi"><h2>Telecí kejta se sardelemi</h2></a>
 
-<p>Telecí kejtu dobře sklepej, kost usekni až ku kolenu, kejtu omej a&nbsp;osol, dej na pekáč kus másla, dvě na koláčky pokrájené cibule a&nbsp;půl celeru, vlož kejtu na to, poklaď ji povrchu též kouskami másla, podlej ji asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody a&nbsp;nech ji pect, přičemž ji častěji polévej, aby zůstala při šťávě; mezitím očisti čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sardelí, utři je nejméně se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla, a&nbsp;když je kejta napolo pečená, potírej ji stále tím sardelovým máslem a&nbsp;nech ji dopect; když se má dáti na stůl, poklaď ji povrchu ještě hodně sardelovým máslem a&nbsp;nech ji v&nbsp;troubě hezky zapěnit, pak ji vyndej na mísu a&nbsp;šťávu na ni proceď</p>
+<p>Telecí kejtu dobře sklepej, kost usekni až ku kolenu, kejtu omej a&nbsp;osol, dej na pekáč kus másla, dvě na koláčky pokrájené cibule a&nbsp;půl celeru, vlož kejtu na to, poklaď ji povrchu též kouskami másla, podlej ji asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody a&nbsp;nech ji pect, přičemž ji častěji polévej, aby zůstala při šťávě; mezitím očisti čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sardelí, utři je nejméně se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla, a&nbsp;když je kejta napolo pečená, potírej ji stále tím sardelovým máslem a&nbsp;nech ji dopect; když se má dáti na stůl, poklaď ji povrchu ještě hodně sardelovým máslem a&nbsp;nech ji v&nbsp;troubě hezky zapěnit, pak ji vyndej na mísu a&nbsp;šťávu na ni proceď.</p>
 
 <a id="teleci-ledvina-s-nadivkou"><h2>Telecí ledvina s&nbsp;nádivkou</h2></a>
 
