--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -276,7 +276,7 @@
 
 <a id="treska-s-omackou"><h2>Treska s&nbsp;omáčkou</h2></a>
 
-<p>Uvař tresku jako prvé, udělej bledou jištičku a&nbsp;zapraž tu scezenou polívku, v&nbsp;které se treska vařila; pak rozkrájej slanečka na kousky, narovnej ho s&nbsp;treskou na rendlík, omáčku na to proceď, dej k&nbsp;tomu několik s&nbsp;novým máslem rozetřených sardelí, trochu květu, a&nbsp;nech to povařit,</p>
+<p>Uvař tresku jako prvé, udělej bledou jištičku a&nbsp;zapraž tu scezenou polívku, v&nbsp;které se treska vařila; pak rozkrájej slanečka na kousky, narovnej ho s&nbsp;treskou na rendlík, omáčku na to proceď, dej k&nbsp;tomu několik s&nbsp;novým máslem rozetřených sardelí, trochu květu, a&nbsp;nech to povařit.</p>
 
 <a id="treska-s-omackou-na-jiny-zpusob"><h2>Treska s&nbsp;omáčkou na jiný způsob</h2></a>
 
