--- a/src/uvod.html
+++ b/src/uvod.html
@@ -32,7 +32,7 @@
 
 <p>Ani maso ani zvěřina nesmí se ukládati v&nbsp;takových místech, kde je ztuchlinu cítit, sice to načichne a&nbsp;jest nechutné.</p>
 
-<p>Vepřové maso jak se k&nbsp;<a href="dodatek.html#jak-se-maso-k-uzeni-naklada">uzení nakládá</a></p>
+<p>Vepřové maso jak se k&nbsp;<a href="dodatek.html#jak-se-maso-k-uzeni-naklada">uzení nakládá</a>.</p>
 
 <p><b><i>Zelenina</i></b> zachová se přes zimu nejlépe v&nbsp;suchém sklepě, a&nbsp;sice: zelí, kapusta a&nbsp;karfiol vytaná se ze země i&nbsp;s&nbsp;kořenem, pak se kořenem zastrká do vlhkého písku; taktéž křen, petružel, celer, mrkev, kolník atd., všecko s&nbsp;natí, zahrabe se do vlhkého písku až po nať, a&nbsp;písek se časem pokropí, aby to zůstalo pořád čerstvé a&nbsp;neporušené.</p>
 
