--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -52,7 +52,7 @@
 
 <a id="kurata-se-sparglovymi-hlavickami"><h2>Kuřata se šparglovými hlavičkami</h2></a>
 
-<p>Ober slupičky s&nbsp;otýpky šparglu, hlavičky uřež asi na dva prsty sdélí a&nbsp;odlož je stranou, ostatní pak nařež na drobné kousky až dolů ku tvrdému dílu a&nbsp;dej to se dvěma nasolenými kuřaty na kus másla dusit; když jsou kuřata měkká, udělej bleďounkou jíšku, nalej na ni dobré hovězí polívky tolik, mnoho-li chceš míti omáčky, vlej ji dobře umíchanou na kuřata a&nbsp;nech to povařit. Zatím uvař ve slané vodě do měkka ty šparglové hlavičky, a&nbsp;když kuřata vyndáš na mísu, tedy hlavičky dobře oceď a&nbsp;kuřata jimi po vrchu poklaď</p>
+<p>Ober slupičky s&nbsp;otýpky šparglu, hlavičky uřež asi na dva prsty sdélí a&nbsp;odlož je stranou, ostatní pak nařež na drobné kousky až dolů ku tvrdému dílu a&nbsp;dej to se dvěma nasolenými kuřaty na kus másla dusit; když jsou kuřata měkká, udělej bleďounkou jíšku, nalej na ni dobré hovězí polívky tolik, mnoho-li chceš míti omáčky, vlej ji dobře umíchanou na kuřata a&nbsp;nech to povařit. Zatím uvař ve slané vodě do měkka ty šparglové hlavičky, a&nbsp;když kuřata vyndáš na mísu, tedy hlavičky dobře oceď a&nbsp;kuřata jimi po vrchu poklaď.</p>
 
 <a id="karafa-s-karfiolem-hribkami-a-racimi-ocasky"><h2>Karafa s&nbsp;karfiolem, hříbkami a&nbsp;račími ocásky</h2></a>
 
@@ -264,7 +264,7 @@
 
 <a id="jehneci-nebo-skopova-kejta-s-kyselou-smetanou"><h2>Jehněčí nebo skopová kejta s&nbsp;kyselou smetanou</h2></a>
 
-<p>Vezmi jehněčí nebo skopovou kejtu, prostrkej ji šalvěji, dej na rendlík kousek másla a&nbsp;dvě cibule, vlož na to kejtu a&nbsp;nech ji na uhlí polehounku dusit, až změkne, přičemž ji podlévej polívkou, aby se nepřipálila; pak na ni nalej polovic polívky a&nbsp;polovic vinního octa, a&nbsp;nech to trochu povařit; nyní vyndej kejtu na jiný rendlík, do omáčky dej brunátné jíšky a&nbsp;kyselé smetany, zamíchej to dobře a&nbsp;nech to trochu povařit, potom to proceď na kejtu, dej k&nbsp;tomu citronové kůry, trochu nového kořeni, nech to ještě povařit a&nbsp;pak to dej na stůl. –</p>
+<p>Vezmi jehněčí nebo skopovou kejtu, prostrkej ji šalvěji, dej na rendlík kousek másla a&nbsp;dvě cibule, vlož na to kejtu a&nbsp;nech ji na uhlí polehounku dusit, až změkne, přičemž ji podlévej polívkou, aby se nepřipálila; pak na ni nalej polovic polívky a&nbsp;polovic vinního octa, a&nbsp;nech to trochu povařit; nyní vyndej kejtu na jiný rendlík, do omáčky dej brunátné jíšky a&nbsp;kyselé smetany, zamíchej to dobře a&nbsp;nech to trochu povařit, potom to proceď na kejtu, dej k&nbsp;tomu citronové kůry, trochu nového kořeni, nech to ještě povařit a&nbsp;pak to dej na stůl.</p>
 
 <a id="skopove-hrudi-dusene"><h2>Skopové hrudí dušené</h2></a>
 
