--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -14,7 +14,7 @@
 
 <a id="zverina-s-jalovcovou-omackou"><h2>Zvěřina s&nbsp;jalovcovou omáčkou</h2></a>
 
-<p>Uvař dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> dobře vyprané zvěřiny ve slané vodě do měkka s&nbsp;připojenou zeleninou, jaká se dává k&nbsp;hovězímu masu; nech na rendlíku rozpustit kus čerstvého loje nebo másla, dej do něho dvě kávové lžičky tlučeného cukru a&nbsp;nech to zčervenat, pak do toho vmíchej dvě plné lžíce mouky, a&nbsp;když je jíška hodně hnědá; nalej na ni znenáhla asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> polívky ze zvěřiny, trochu octa a&nbsp;sklenici červeného vina, přidej k&nbsp;tomu hrst protlučeného jalovce a&nbsp;nech to hodně povařit; pak maso rozkrájej na kousky, urovnej ho na mísu a&nbsp;omáčku naň skrze cedník proceď</p>
+<p>Uvař dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> dobře vyprané zvěřiny ve slané vodě do měkka s&nbsp;připojenou zeleninou, jaká se dává k&nbsp;hovězímu masu; nech na rendlíku rozpustit kus čerstvého loje nebo másla, dej do něho dvě kávové lžičky tlučeného cukru a&nbsp;nech to zčervenat, pak do toho vmíchej dvě plné lžíce mouky, a&nbsp;když je jíška hodně hnědá; nalej na ni znenáhla asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> polívky ze zvěřiny, trochu octa a&nbsp;sklenici červeného vina, přidej k&nbsp;tomu hrst protlučeného jalovce a&nbsp;nech to hodně povařit; pak maso rozkrájej na kousky, urovnej ho na mísu a&nbsp;omáčku naň skrze cedník proceď.</p>
 
 <a id="divoka-kachna"><h2>Divoká kachna</h2></a>
 
@@ -56,7 +56,7 @@
 
 <a id="duseni-skrivanci"><h2>Dušení skřivánci</h2></a>
 
-<p>Ober, vykuchej a&nbsp;očistí náležitě skřivánky. Dej na rendlík kus másla, dvě drobně nasekané cibule a&nbsp;nech to do zlatova spěnit, pak dej ptáčky do toho, osol je, přikrej poklicí a&nbsp;nech je dusit; když se vypuštěná z&nbsp;nich šťáva začíná ztrácet, přisyp k&nbsp;nim asi lžíci mouky, „zamíchej to a&nbsp;přilej tolik hovězí polívky, mnoho-li je potřebí, aby bylo dostatečně omáčky, pak to trochu okořeň tlučeným pepřem, přilej čtvrtku vína, nech to ještě trochu povařit a&nbsp;dej to na mísu“</p>
+<p>Ober, vykuchej a&nbsp;očistí náležitě skřivánky. Dej na rendlík kus másla, dvě drobně nasekané cibule a&nbsp;nech to do zlatova spěnit, pak dej ptáčky do toho, osol je, přikrej poklicí a&nbsp;nech je dusit; když se vypuštěná z&nbsp;nich šťáva začíná ztrácet, přisyp k&nbsp;nim asi lžíci mouky, „zamíchej to a&nbsp;přilej tolik hovězí polívky, mnoho-li je potřebí, aby bylo dostatečně omáčky, pak to trochu okořeň tlučeným pepřem, přilej čtvrtku vína, nech to ještě trochu povařit a&nbsp;dej to na mísu“.</p>
 
 <a id="male-ptacky-s-omackou"><h2>Malé ptáčky s&nbsp;omáčkou</h2></a>
 
