--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -210,7 +210,7 @@
 
 <a id="ocukrovane-orisky"><h2>Ocukrované oříšky</h2></a>
 
-<p>Vyber ty největší a&nbsp;nejpěknější jádra z&nbsp;lískových oříšků, opař a&nbsp;oloupej je, k&nbsp;čemuž malý nožík ku pomoci vzíti musíš, načež každé jádro zvlášť na předešlý způsob v&nbsp;hustě zvařeném cukru omoč a&nbsp;nech je oschnout; potom je zaobal do stejně nastříhaných barevných papírků a&nbsp;tyto na obou koncích zakruť</p>
+<p>Vyber ty největší a&nbsp;nejpěknější jádra z&nbsp;lískových oříšků, opař a&nbsp;oloupej je, k&nbsp;čemuž malý nožík ku pomoci vzíti musíš, načež každé jádro zvlášť na předešlý způsob v&nbsp;hustě zvařeném cukru omoč a&nbsp;nech je oschnout; potom je zaobal do stejně nastříhaných barevných papírků a&nbsp;tyto na obou koncích zakruť.</p>
 
 <p>Na tentýž způsob se může každý druh ovoce, jako mirabelky, ringló a&nbsp;t. p. ocukrovat.</p>
 
