--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -104,7 +104,7 @@
 
 <a id="horcice"><h2>Hořčice</h2></a>
 
-<p>Na čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> hořčicové mouky nech svařit dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobrého vinného octa s&nbsp;několika hřebíčky, citronovou kůrou a&nbsp;kouskem květu, pak dej hořčici na mísu a&nbsp;nalej na ni za ustavičného míchání ten vařící ocet, musíš však hodně míchat, aby se nenadělaly žmolky; když to vychladne, nalej to do flašky a&nbsp;ulož na chladném místě. Edo chce, může při vaření do toho dát kus cukru.</p>
+<p>Na čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> hořčicové mouky nech svařit dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobrého vinného octa s&nbsp;několika hřebíčky, citronovou kůrou a&nbsp;kouskem květu, pak dej hořčici na mísu a&nbsp;nalej na ni za ustavičného míchání ten vařící ocet, musíš však hodně míchat, aby se nenadělaly žmolky; když to vychladne, nalej to do flašky a&nbsp;ulož na chladném místě. Kdo chce, může při vaření do toho dát kus cukru.</p>
 
 <a id="kysely-rosol"><h2>Kyselý rosol</h2></a>
 
