--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -172,7 +172,7 @@
 
 <a id="hrach-promackany"><h2>Hrách promačkaný</h2></a>
 
-<p>Uvař hrách do měkká. Nech na kastrolu spěnit na sádle cibulku a&nbsp;hrách do ni skrze cedník promačkej, je-li potřeba, přisol ho, vmíchej do něho lžíci strouhané žemličky, pak ho dej na miska, omasti sádlem nebo máslem a&nbsp;oblož ho buď uzenkami nebo <a href="smazeniny-pofezky-svitky-a-kotletky.html#veprove-kotletky">smaženými kotletkami</a></p>
+<p>Uvař hrách do měkká. Nech na kastrolu spěnit na sádle cibulku a&nbsp;hrách do ni skrze cedník promačkej, je-li potřeba, přisol ho, vmíchej do něho lžíci strouhané žemličky, pak ho dej na miska, omasti sádlem nebo máslem a&nbsp;oblož ho buď uzenkami nebo <a href="smazeniny-pofezky-svitky-a-kotletky.html#veprove-kotletky">smaženými kotletkami</a>.</p>
 
 <a id="cocka"><h2>Čočka</h2></a>
 
