--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -188,34 +188,38 @@ Ode všeho po dvou mísách.Po malé přestávce následují koláče, dorty a&n
 <h4>Pečené</h4>
 
 <ol>
-	<li>Kachny</li>
-	<li>Bažanti neb koroptve</li>
-	<li>Kuřata</li>
-	<li>Srnčí kýta</li>
+	<li><a href="pecene.html#husa-a-kachna">Kachny</a></li>
+	<li><a href="pecene.html#koroptve-a-bazant">Bažanti neb koroptve</a></li>
+	<li><a href="pecene.html#kurata-vyslanena">Kuřata</a></li>
+	<li><a href="pecene.html#srnci-hrbet-a-kejta">Srnčí kýta</a></li>
 	<li>Krocan</li>
-	<li>Dva kyselé saláty, pak brusinkový a&nbsp;pomerančový kompot</li>
-	<li>Šunka s&nbsp;aspikem</li>
-	<li>Rosolovaný nadívaný kapoun</li>
+	<li>Dva kyselé saláty, pak <a href="kompoty.html#kompot-z-brusinek">brusinkový</a> a&nbsp;<a href="kompoty.html#kompot-z-mrkve-a-pomerancu">pomerančový</a> kompot</li>
+	<li>Šunka s&nbsp;<a href="masite-rosoly.html#aspik">aspikem</a></li>
+	<li><a href="masite-rosoly.html#nadivany-kapoun-s-aspikem">Rosolovaný nadívaný kapoun</a></li>
 </ol>
 
 <p>
-Všeho dvě mísy. Po malé přestávce.
+Všeho dvě mísy.
+</p>
+
+<p>
+Po malé přestávce:
 </p>
 
 <h4>Pamlsky</h4>
 
 <ol>
-	<li>Dort mandlový a&nbsp;chlebový</li>
-	<li>Dvě mísy německých koláčů</li>
-	<li>Dva talíře hubinek z&nbsp;lískových oříšků</li>
-	<li>Dva talíře dortičků z&nbsp;tvrdých žloutků</li>
-	<li>Dva talíře smažených mandlí</li>
-	<li>Dva talíře biskupského chlebíčka</li>
-	<li>Dva talíře cukrové šunky</li>
-	<li>Dva talíře jitrnice z&nbsp;míšeňských jablek</li>
-	<li>Dva talíře oplatků</li>
-	<li>Dva talíře lihových věnečků</li>
-	<li>Talíř ocukrovaných pomerančů a&nbsp;talíř ocukrovaných kaštanů; zároveň též dva sladké rosoly, vinní a&nbsp;vaniliový</li>
+	<li><a href="dorty.html#mandlovy-dort">Dort mandlový</a> a&nbsp;<a href="dorty.html#cerny-chlebovy-dort">chlebový</a></li>
+	<li>Dvě mísy <a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#nemecke-kolace">německých koláčů</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#hubinky-z-liskovych-orisku">hubinek z&nbsp;lískových oříšků</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#dorticky-zloutkove">dortičků z&nbsp;tvrdých žloutků</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#smazene-mandle">smažených mandlí</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#biskupsky-chlebicek">biskupského chlebíčka</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#cukrova-sunka">cukrové šunky</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#bila-jitrnice-z-misenskych-jablek">jitrnice z&nbsp;míšeňských jablek</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#oplatky">oplatků</a></li>
+	<li>Dva talíře <a href="cukrovinky.html#lihove-venecky">lihových věnečků</a></li>
+	<li>Talíř ocukrovaných pomerančů a&nbsp;talíř ocukrovaných kaštanů; zároveň též dva sladké rosoly, <a href="sladke-rosoly.html#rosol-z-vina">vinní</a> a&nbsp;<a href="sladke-rosoly.html#rosol-z-vanilie">vaniliový</a></li>
 	<li>Dva talíře ořechů</li>
 	<li>Talíř hrušek a&nbsp;talíř jablek</li>
 </ol>
@@ -253,15 +257,15 @@ Všeho dvě mísy. Po malé přestávce.
 <h3>Příklad třetí</h3>
 
 <ol>
-	<li>Polívka z&nbsp;kapra na způsob jaternicové</li>
-	<li>Mušle s&nbsp;vínem</li>
-	<li>Svítek z&nbsp;vajec s&nbsp;houbami</li>
-	<li>Omaštěná štika</li>
-	<li>Nákyp z&nbsp;jablek</li>
-	<li>Kapr se žlutou omáčkou</li>
-	<li>Fašírovaní raci s&nbsp;karfiolem</li>
-	<li>Smažená ryba se salátem</li>
-	<li>Talíř žloutkových koláčků a&nbsp;talíř sucharu</li>
+	<li><a href="rybi-a-postni-polivky.html#polivka-z-kapra-na-zpusob-jaternicove">Polívka z&nbsp;kapra na způsob jaternicové</a></li>
+	<li><a href="raci-zaby-sneci-a-musle.html#musle-s-vinem">Mušle s&nbsp;vínem</a></li>
+	<li><a href="vejce.html#svitek-z-vajec-s-houbami">Svítek z&nbsp;vajec s&nbsp;houbami</a></li>
+	<li><a href="rozlicne-ryby.html#stika-omastena">Omaštěná štika</a></li>
+	<li><a href="nakypy.html#nakyp-z-jablek">Nákyp z&nbsp;jablek</a></li>
+	<li><a href="rozlicne-ryby.html#kapr-se-zlutou-omackou">Kapr se žlutou omáčkou</a></li>
+	<li><a href="raci-zaby-sneci-a-musle.html#fasirovani-raci-s-karfiolem">Fašírovaní raci s&nbsp;karfiolem</a></li>
+	<li><a href="rozlicne-ryby.html#kapr-smazeny">Smažená ryba</a> se salátem</li>
+	<li>Talíř <a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#kolace-zloutkove">žloutkových koláčků</a> a&nbsp;talíř <a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#suchary">sucharu</a></li>
 	<li>Dva talíře ovoce</li>
 	<li>Nápoje jako prvé</li>
 </ol>
