--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -273,35 +273,35 @@ Po malé přestávce:
 <h3>Příklad čtvrtý</h3>
 
 <ol>
-	<li>Polívka z&nbsp;raků se svítkem</li>
-	<li>Marinovaný ouhoř</li>
-	<li>Vejce se sladkou smetanou</li>
-	<li>Nadívaní šneci, k&nbsp;tomu malaga</li>
-	<li>Štika s&nbsp;vinní omáčkou</li>
-	<li>Piškotový nákyp s&nbsp;mandlemi</li>
-	<li>Pečení mníci</li>
-	<li>Kapr se sardelemi</li>
-	<li>Španělské větry</li>
-	<li>Německé koláče</li>
+	<li><a href="rybi-a-postni-polivky.html#polivka-z-raku">Polívka z&nbsp;raků</a> se svítkem</li>
+	<li><a href="rozlicne-ryby.html#marinovany-o-uhor">Marinovaný ouhoř</a></li>
+	<li><a href="vejce.html#vejce-se-sladkou-smetanou">Vejce se sladkou smetanou</a></li>
+	<li><a href="raci-zaby-sneci-a-musle.html#nadivani-sneci">Nadívaní šneci</a>, k&nbsp;tomu malaga</li>
+	<li><a href="rozlicne-ryby.html#pecena-stika-s-omackou">Štika s&nbsp;vinní omáčkou</a></li>
+	<li><a href="nakypy.html#piskotovy-nakyp-s-mandlemi">Piškotový nákyp s&nbsp;mandlemi</a></li>
+	<li><a href="rozlicne-ryby.html#peceni-mnici">Pečení mníci</a></li>
+	<li><a href="rozlicne-ryby.html#kapr-se-sardelemi">Kapr se sardelemi</a></li>
+	<li><a href="cukrovinky.html#spanelske-vetry-a-mandlemi">Španělské větry</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#nemecke-kolace">Německé koláče</a></li>
 	<li>Dva talíře ovoce a&nbsp;obyčejné nápoje</li>
 </ol>
 
 <h3>Příklad pátý bez ryb</h3>
 
 <ol>
-	<li>Polívka z&nbsp;vína nebo piva</li>
-	<li>Nepravé ústřice</li>
-	<li>Vejce s&nbsp;kyselou smetanou</li>
-	<li>Omaštěný karfiol</li>
-	<li>Pudding se šodó</li>
-	<li>Nadívaní šneci</li>
-	<li>Dobrá buchta</li>
-	<li>Slané rohlíčky k&nbsp;pivu</li>
-	<li>Čerstvé suchárky</li>
-	<li>Sladký rosol</li>
-	<li>Cukrová šunka</li>
-	<li>Komisní chlebíček</li>
-	<li>Linecký dort</li>
+	<li><a href="rybi-a-postni-polivky.html#vinni-polivka">Polívka z&nbsp;vína</a> nebo <a href="rybi-a-postni-polivky.html#pivni-polivka">piva</a></li>
+	<li><a href="prichoutky-cili-asietky.html#neprave-ustrice">Nepravé ústřice</a></li>
+	<li><a href="vejce.html#vejce-s-kyselou-smetanou">Vejce s&nbsp;kyselou smetanou</a></li>
+	<li><a href="zeleniny.html#karfiol-omasteny">Omaštěný karfiol</a></li>
+	<li><a href="pudingy.html">Pudding</a> se šodó</li>
+	<li><a href="raci-zaby-sneci-a-musle.html#nadivani-sneci">Nadívaní šneci</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#dobra-buchta">Dobrá buchta</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#kminem-sypane-rohlicky-k-pivu">Slané rohlíčky k&nbsp;pivu</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#cerstve-sucharky">Čerstvé suchárky</a></li>
+	<li><a href="sladke-rosoly.html">Sladký rosol</a></li>
+	<li><a href="cukrovinky.html#cukrova-sunka">Cukrová šunka</a></li>
+	<li><a href="cukrovinky.html#komisni-chlebicek">Komisní chlebíček</a></li>
+	<li><a href="dorty.html#linecky-dort">Linecký dort</a></li>
 	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
