--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -16,7 +16,7 @@
 
 <a id="polivka-s-rejzovymi-knedlickami"><h2>Polívka s&nbsp;rejžovými knedlíčkami</h2></a>
 
-<p>Uvař čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> přebrané a&nbsp;dobře ve vařící vodě vyprané rejže ve smetaně na hustou kasičku a&nbsp;nech ji vychladnout; potom utři na misce dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla a&nbsp;dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> hovězího tuku, vmíchej do toho tu kaši, šest žloutků, ze třech bílků sníh, trochu soli, a&nbsp;dobře to utři; pak zavařuj malou lžičkou knedlíčky do vařící hovězí polívky, a&nbsp;nech je asi deset minut povařit. Kdyby těsto bylo řídké, může se k&nbsp;němu přimíchat lžička pěkné mouky.</p>
+<p>Uvař čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> přebrané a&nbsp;dobře ve vařící vodě vyprané rejže ve smetaně na hustou kašičku a&nbsp;nech ji vychladnout; potom utři na misce dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla a&nbsp;dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> hovězího tuku, vmíchej do toho tu kaši, šest žloutků, ze třech bílků sníh, trochu soli, a&nbsp;dobře to utři; pak zavařuj malou lžičkou knedlíčky do vařící hovězí polívky, a&nbsp;nech je asi deset minut povařit. Kdyby těsto bylo řídké, může se k&nbsp;němu přimíchat lžička pěkné mouky.</p>
 
 <p>Tyto knedlíčky mohou se též do rozpáleného propouštěného másla klásti, do zlatová usmažit, a&nbsp;pak polívka na ně nalejt.</p>
 
