--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -60,5 +60,5 @@
 
 <p>Ze studené telecí pečeně nakrájej malé řízky, asi jako velké nudle; usmaž na máslo asi dvě vrchovaté lžíce žemličky, dej do ní ty řízky, přidej k&nbsp;tomu trochu citronové kůry, trochu kaprlí, trochu míšeninky z&nbsp;dymiánu (viz mezi mišeninkami), trochu tučné polívky, trochu vinného octa, a&nbsp;nech to zvařit; pak to dej na misku, oblož to na půlměsíčky nakrájenou usmaženou žemličkou a&nbsp;nes to na stůl.</p>
 
-<p>Je to dobré. jidélko a&nbsp;nestojí mnoho; může se udělat z&nbsp;dosti malých drobtů, které by se jinak ani na stůl dáti nemohly.</p>
+<p>Je to dobré jidélko a&nbsp;nestojí mnoho; může se udělat z&nbsp;dosti malých drobtů, které by se jinak ani na stůl dáti nemohly.</p>
 
