--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -108,7 +108,7 @@
 
 <a id="studena-stika-s-aspikem"><h2>Studená štika s&nbsp;aspikem</h2></a>
 
-<p>Uvař štiku jak obyčejně na modro a&nbsp;nech ji trochu prochladnout, pak s&nbsp;ni stáhni kůži, kůstky vyber, bílé masíčko rozlož pěkně na lístky a&nbsp;urovnej je na mísu; pak omej v&nbsp;teplé vodě trochu dymiánu a&nbsp;několik bobkových lístků, aby na nich prach nezůstal, a&nbsp;utluč to v&nbsp;moždíři s&nbsp;několika na tvrdo uvařenými žloutkami; zatím nech uvařit žemličku na hustou kasičku v&nbsp;té polívce, v&nbsp;které se štika vařila, dej ji do moždíře k&nbsp;tomu ostatnímu, nalej na to trochu octa a&nbsp;trochu té polívky, dobře to rozmíchej, pak to proceď, přilej ještě trochu octa a&nbsp;oleje, polej tím to urovnané masíčko ze štiky, a&nbsp;okolo udělej věnec z&nbsp;<a href="#postni-aspik">postního rosolu</a>.</p>
+<p>Uvař štiku jak obyčejně na modro a&nbsp;nech ji trochu prochladnout, pak s&nbsp;ni stáhni kůži, kůstky vyber, bílé masíčko rozlož pěkně na lístky a&nbsp;urovnej je na mísu; pak omej v&nbsp;teplé vodě trochu dymiánu a&nbsp;několik bobkových lístků, aby na nich prach nezůstal, a&nbsp;utluč to v&nbsp;moždíři s&nbsp;několika na tvrdo uvařenými žloutkami; zatím nech uvařit žemličku na hustou kašičku v&nbsp;té polívce, v&nbsp;které se štika vařila, dej ji do moždíře k&nbsp;tomu ostatnímu, nalej na to trochu octa a&nbsp;trochu té polívky, dobře to rozmíchej, pak to proceď, přilej ještě trochu octa a&nbsp;oleje, polej tím to urovnané masíčko ze štiky, a&nbsp;okolo udělej věnec z&nbsp;<a href="#postni-aspik">postního rosolu</a>.</p>
 
 <a id="losos-na-modro"><h2>Losos na modro</h2></a>
 
