--- a/src/salaty.html
+++ b/src/salaty.html
@@ -78,4 +78,4 @@
 
 <a id="salat-ze-syroveho-masa"><h2>Salát ze syrového masa</h2></a>
 
-<p>Seškrab ostrou plechovou lžicí <a href="miry-a-vahy.html#libra" class="mav">libru</a> hovězího masa z&nbsp;kejty na kasičku, pak udělej z&nbsp;toho na talíř čtyry hromádky, posyp je solí, pepřem a&nbsp;velmi drobounce nasekanou cibulí, polej to octem a&nbsp;olejem, a&nbsp;nech to nejméně půl hodiny stát, aby se chuť z&nbsp;přísad do masa vtáhla. Můžeš k&nbsp;tomu také připojit sardele, kaprle a&nbsp;na tvrdo vařené skrájené vejce.</p>
+<p>Seškrab ostrou plechovou lžicí <a href="miry-a-vahy.html#libra" class="mav">libru</a> hovězího masa z&nbsp;kejty na kašičku, pak udělej z&nbsp;toho na talíř čtyry hromádky, posyp je solí, pepřem a&nbsp;velmi drobounce nasekanou cibulí, polej to octem a&nbsp;olejem, a&nbsp;nech to nejméně půl hodiny stát, aby se chuť z&nbsp;přísad do masa vtáhla. Můžeš k&nbsp;tomu také připojit sardele, kaprle a&nbsp;na tvrdo vařené skrájené vejce.</p>
