--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -78,7 +78,7 @@
 
 <a id="cukrova-sunka"><h2>Cukrová šunka</h2></a>
 
-<p>Oloupej a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandlí, pak je dej na mísu, k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, trochu bukového sněhu a&nbsp;dobře to utři; potom toho čtvrtinu odlož stranou, do ostatního dej <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučeného hřebíčku, <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučené skořice, též tolik strouhaného muškátového ořechu, lžičku sandálového prásku (pulvisirter Sandel), všecko dobře promíchej a&nbsp;vypracuj, načež z&nbsp;toho udělej bochánek, navrch dej tu prvé stranou odloženou bílou mandlovou kasičku a&nbsp;přimáčkni ji, potom bochánek rozkrájej, ty řízky nožem na papíře uhlaď a&nbsp;nech je usušit; pak to narovnej na talíř jako nakrájenou šunku. Pro větší žert může se na stůl k&nbsp;tomu dát do slánky strouhané čokolády místo pepře. Je to chutný a&nbsp;pěkný pamlsek.</p>
+<p>Oloupej a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandlí, pak je dej na mísu, k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, trochu bukového sněhu a&nbsp;dobře to utři; potom toho čtvrtinu odlož stranou, do ostatního dej <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučeného hřebíčku, <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučené skořice, též tolik strouhaného muškátového ořechu, lžičku sandálového prásku (pulvisirter Sandel), všecko dobře promíchej a&nbsp;vypracuj, načež z&nbsp;toho udělej bochánek, navrch dej tu prvé stranou odloženou bílou mandlovou kašičku a&nbsp;přimáčkni ji, potom bochánek rozkrájej, ty řízky nožem na papíře uhlaď a&nbsp;nech je usušit; pak to narovnej na talíř jako nakrájenou šunku. Pro větší žert může se na stůl k&nbsp;tomu dát do slánky strouhané čokolády místo pepře. Je to chutný a&nbsp;pěkný pamlsek.</p>
 
 <a id="cukrovy-cervulat"><h2>Cukrový cervulát</h2></a>
 
@@ -158,7 +158,7 @@
 
 <a id="citronove-loucky"><h2>Citronové loučky</h2></a>
 
-<p>Utluč cukr a&nbsp;prosej ho skrze husté sejtko, aby byl jako mouka, naceď do něho citronové šťávy, dej k&nbsp;tomu kouštínek bílkového sněhu a&nbsp;míchej to jako hustou kasičku; pak to rozděl na tři díly, do jednoho dej na cukru ostrouhanou citronovou kůru, do druhého vymačkaný červený tarnisol a&nbsp;do třetího špenátovou šťávu, potom nakrájej oplátky na dva prsty široké a&nbsp;na dva prsty dlouhé, pomaž jé tím ledem a&nbsp;nech je ve vlažné troubě zvolna usušit.</p>
+<p>Utluč cukr a&nbsp;prosej ho skrze husté sejtko, aby byl jako mouka, naceď do něho citronové šťávy, dej k&nbsp;tomu kouštínek bílkového sněhu a&nbsp;míchej to jako hustou kašičku; pak to rozděl na tři díly, do jednoho dej na cukru ostrouhanou citronovou kůru, do druhého vymačkaný červený tarnisol a&nbsp;do třetího špenátovou šťávu, potom nakrájej oplátky na dva prsty široké a&nbsp;na dva prsty dlouhé, pomaž jé tím ledem a&nbsp;nech je ve vlažné troubě zvolna usušit.</p>
 
 <a id="jine-loucky-z-mandli"><h2>Jiné loučky z&nbsp;mandlí</h2></a>
 
@@ -184,7 +184,7 @@
 
 <a id="pulmesicky-z-velkych-orechu"><h2>Půlměsíčky z&nbsp;velkých ořechů</h2></a>
 
-<p>Čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> jader z&nbsp;velkých ořechů a&nbsp;čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru pospolu utluč, pak to dej na vál, přidej k&nbsp;tomu dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> okrouhlým nožem na kasičku rozkrájených sultánek (hrozinek bez pecek) a&nbsp;zadělej to jedním žloutkem, načež těsto na stéblo tlustě rozválej a&nbsp;vypichuj z&nbsp;něho půlměsíčky nebo malé kolečka, klaď je na voskem pomazaný plech a&nbsp;nech je ne příliš zprudka pect; potom je potři bílým ledem a&nbsp;nech je opět osušit.</p>
+<p>Čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> jader z&nbsp;velkých ořechů a&nbsp;čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru pospolu utluč, pak to dej na vál, přidej k&nbsp;tomu dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> okrouhlým nožem na kašičku rozkrájených sultánek (hrozinek bez pecek) a&nbsp;zadělej to jedním žloutkem, načež těsto na stéblo tlustě rozválej a&nbsp;vypichuj z&nbsp;něho půlměsíčky nebo malé kolečka, klaď je na voskem pomazaný plech a&nbsp;nech je ne příliš zprudka pect; potom je potři bílým ledem a&nbsp;nech je opět osušit.</p>
 
 <a id="ocukrovane-pomerance"><h2>Ocukrované pomeranče</h2></a>
 
